SFDC Automation/src/objects/RSM_ContractDetail__c.object
<CustomObject>
    <description>The object stores the details of the contract</description>
    <fields>
        <fullName>Action_ID__c</fullName>
        <label>Action ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Action_Name__c</fullName>
        <label>Action Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Detail_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract Detail ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <referenceTo>RSM_Contract__c</referenceTo>
        <relationshipName>ContractNumber</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EffectiveDate__c</fullName>
        <description>Field to store the effective date of the contract</description>
        <label>EffectiveDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_sent_to_De_Activate_contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to capture if Email is sent to RSS to De-activation Contract.</description>
        <label>Email sent to De-Activate contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Projected_Revenu__c</fullName>
        <formula>((Unit_Number__r.EXPIRATION_DATE__c - DATEVALUE(Contract_Number__r.Effective_Date__c))/30)* Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Revenue__c</fullName>
        <formula>((Unit_Number__r.EXPIRATION_DATE__c - TODAY())/30) * Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_ID__c</fullName>
        <label>Service ID</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit Number</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipName>RSContractDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid</label>
        <type>Checkbox</type>
    </fields>
    <label>RSM ContractDetail</label>
    <nameField>
        <label>RSM ContractDetailID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RSM ContractDetails</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>RSM_ContractDetailID_Readonly_Managers</fullName>
        <active>true</active>
        <description>Making Read Only for RydeSMart Managers on the Field RSMContractDetailID</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name = &quot;RydeSmart Manager&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RSM_ContractDetailID_Readonly_Users</fullName>
        <active>true</active>
        <description>Making Read Only for RydeSMart Users on the Field RSMContractDetailID</description>
        <errorConditionFormula>AND(ISCHANGED( Name ),$Profile.Name = &quot;RydeSmart User&quot;)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You do not have permission to edit this field</errorMessage>
    </validationRules>
</CustomObject>